# reproduce_static_dependency_crash

./: .gitignore  CMakeLists.txt  README.md
build_client/: CMakeCache.txt  Makefile  client  cmake_install.cmake
build_static/: CMakeCache.txt  Makefile  cmake_install.cmake
built_libs/include/: Unuseful.h
client/: CMakeLists.txt  TestVariadic.c  TestVariadic.h  exploit.rb  main.c  main.cpp
libstatic/: CMakeLists.txt
libstatic/include/: ExternalVariadic.h
libstatic/src/: ExternalVariadic.c  Unuseful.cpp
